--- a/app/locales/de.yml
+++ b/app/locales/de.yml
@@ -11,7 +11,26 @@ message:
     %{author} hat eine Nachricht für das Starboard vorgeschlagen.
   footer: Drücke den Schalter um einen Stern hinzuzufügen.
   jump: Zur Nachricht springen
+    
+invite: 
+  message: >
+    Klicke auf den Button, um loszulegen. Nachdem du den Server ausgewählt hast,
+    musst du einen bereits angelegten channel festlegen, an den Starboard seine Nachrichten
+    senden soll.
+  button: Klicke hier, um fortzufahren
 
 commands:
   star_context:
     name: Einreichen
+  invite:
+    name: installieren
+    description: Starboard auf deinem Server einrichten.
+  settings:
+    name: einstellungen
+    description: Starboard konfigurieren. 
+  manual:
+    name: handbuch
+    description: Anleitungen und hilfreiche Tipps.
+    topic:
+      name: thema
+      description: Das Thema, über das du lesen willst.
