Localize the manual (#8)
* restructured the manual command

* support file loading

* wrote the actual files

--- a/app/locales/en-US.yml
+++ b/app/locales/en-US.yml
@@ -47,10 +47,16 @@ commands:
     delete_message:
       name: delete_messages
       description: Whether or not to delete the interaction response after starring and sending the message.
-
   manual:
     name: manual
     description: Get some information about Starboard.
+    language:
+      name: language
+      description: The language you want to read in.
+      english: English
+      german: German
     topic:
       name: topic
       description: The topic you want to read about.
+      locale_error: A locale must be chosen first.
+      placeholder: Select a topic
